--- a/iOSLuzmelia/iOSLuzmelia/ViewControllers/Viper/ViperLogin/ViperLoginViewController/ViperLoginViewController.xib
+++ b/iOSLuzmelia/iOSLuzmelia/ViewControllers/Viper/ViperLogin/ViperLoginViewController/ViperLoginViewController.xib
@@ -9,6 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViperLoginViewController" customModule="iOSLuzmelia" customModuleProvider="target">
             <connections>
+                <outlet property="lblHeader" destination="7dT-Dc-WhD" id="Uar-3B-CEh"/>
                 <outlet property="lblTitle" destination="MqG-Hb-6SC" id="wqD-nK-cAk"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -25,10 +26,17 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7dT-Dc-WhD">
+                    <rect key="frame" x="16" y="80" width="358" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <point key="canvasLocation" x="-569" y="25"/>
+            <point key="canvasLocation" x="-569.23076923076917" y="24.881516587677723"/>
         </view>
     </objects>
 </document>
